# ws

./: .gitignore  README.md
crawlitos/: main.py
crawlitos/crawlitos/: globals.py  gm.py  map.py  math.py  raycast.py  visuals.py
musa/: lab.py  main.py
musa/musa/: defaults.py  scales.py  wavers.py  waves.py
pixelito/: main.py  pyproject.toml
pixelito/deprecated/: qt.py.d
python/crawlitos/: pyproject.toml
python/crawlitos/crawlitos/: globals.py  gm.py  raycast.py  visuals.py
python/crawlitos/deprecated/: geom.d
python/musa/: lab.py  pyproject.toml
python/musa/musa/: generators.py  waves.py
rust/crawlitos/: Cargo.toml
rust/wgpututorial/: Cargo.toml
rust/wgpututorial/src/: main.rs  shader.wgsl
